[gd_scene load_steps=3 format=2]

[ext_resource path="res://code/camera_fixe_salle.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 768, 448 )

[node name="camera_fixe_salle" type="Area2D"]
position = Vector2( 1984, 3393 )
collision_layer = 0
collision_mask = 3072
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Camera_salle" type="Camera2D" parent="."]
zoom = Vector2( 1.5, 1.5 )
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_speed = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_CameraSalleTest_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_CameraSalleTest_body_exited"]
